<resources>
    <string name="app_name">StudyApp</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_list">MainListActivity</string>
    <string name="title_activity_login">Prom</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_register">Register</string>
    <string name="passwords_dont_match">The passwords do not match.</string>
    <string name="fill_in_fields">Please fill in all fields.</string>
    <string name="URL_JSON">https://dry-dawn-8666.herokuapp.com/</string>
    <string name="not_valid_user_pass">Not a valid username or password</string>
</resources>
