<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="20dp"
              tools:context=".RegisterFragment"
                android:id="@+id/registerFragment">

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <AutoCompleteTextView
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"/>

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Confirm Password"
                android:inputType="textPassword"
                android:textColor="#FFFFFF"
                android:textColorHint="#FFFFFF"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="?android:textAppearanceSmall"
                android:id="@+id/email_register_button"
                android:layout_marginTop="16dp"
                android:text="@string/action_register"
                android:textStyle="bold"
                android:textColor="#FFFFFF"/>


        </LinearLayout>
    </ScrollView>

</LinearLayout>
